--- a/RobotPackage/report.html
+++ b/RobotPackage/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,8454],[],[[5,0,0,[],[1,205,8247],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24449],[],[[4,0,0,[],[1,6538,1595],[]],[5,0,0,[],[1,8134,711],[]],[6,0,0,[],[1,8845,683],[]],[7,0,0,[],[1,9528,745],[]],[8,0,0,[],[1,10274,694],[]],[9,0,0,[],[1,10968,678],[]],[10,0,0,[],[1,11647,732],[]],[11,0,0,[],[1,12380,725],[]],[12,0,0,[],[1,13105,752],[]],[13,0,0,[],[1,13858,719],[]],[14,0,0,[],[1,14578,746],[]],[15,0,0,[],[1,15325,715],[]],[16,0,0,[],[1,16041,736],[]],[17,0,0,[],[1,16777,727],[]],[18,0,0,[],[1,17504,733],[]]],[],[15,15,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*childWindows","*C:\\Users\\goyal\\PycharmProjects\\pythonProject1\\RobotPackage\\childWindows.robot","*childWindows.robot","*<p>To validate the  child windows\x3c/p>","*Validate Child window Functionality"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ExcelDataRead","*C:\\Users\\goyal\\PycharmProjects\\pythonProject1\\RobotPackage\\ExcelDataRead.robot","*ExcelDataRead.robot","*LoginTestWithExcel using sedrick_brekke29@yahoo.com and vsd4q","*LoginTestWithExcel using alba98@hotmail.com and b38au","*LoginTestWithExcel using perry14@hotmail.com and hpale","*LoginTestWithExcel using eldred7@gmail.com and 0kjp6","*LoginTestWithExcel using harmon.conn@yahoo.com and wh9is","*LoginTestWithExcel using coralie.welch@hotmail.com and cu2h6","*LoginTestWithExcel using durward89@hotmail.com and j1hdn","*LoginTestWithExcel using john_kling@yahoo.com and qkn2k","*LoginTestWithExcel using drake_bode@yahoo.com and zsa1a","*LoginTestWithExcel using monserrat.vonrueden16@gmail.com and xb1cd","*LoginTestWithExcel using breanne.muller@hotmail.com and 1aygf","*LoginTestWithExcel using charles_bashirian39@yahoo.com and 5pqmy","*LoginTestWithExcel using rosalee82@gmail.com and so06y","*LoginTestWithExcel using rosie.rau@yahoo.com and 0rkyl","*LoginTestWithExcel using lenora_goyette25@yahoo.com and xywyd"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"childWindows","name":"childWindows","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":15,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"ExcelDataRead","name":"ExcelDataRead","pass":15,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1691670291220;
+window.output["baseMillis"] = 1691743449974;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8473;
+window.output["generated"] = 24467;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
